code is in place, need to troubleshoot the routes
