# personal_assignments/week05-08/controllers/recipes.js
@@ -2,7 +2,7 @@ const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res) => {
-  const result = await mongodb.getDb().db().collection('contacts').find();
+  const result = await mongodb.getDb().db().collection('recipes').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists);
@@ -11,22 +11,27 @@ const getAll = async (req, res) => {
 
 const getSingle = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const result = await mongodb.getDb().db().collection('contacts').find({ _id: userId });
+  const result = await mongodb.getDb().db().collection('recipes').find({ _id: userId });
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists[0]);
   });
 };
 
-const createContact = async (req, res) => {
-  const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+const createRecipe = async (req, res) => {
+  const recipe = {
+    recipeName: req.body.recipeName,
+    description: req.body.description,
+    source: req.body.source,
+    servings: req.body.servings,
+    prepTime: req.body.prepTime,
+    cookTime: req.body.cookTime,
+    category: req.body.category,
+    keywords: req.body.keywords,
+    ingredients: req.body.ingredients,
+    instructions: req.body.instructions
   };
-  const response = await mongodb.getDb().db().collection('contacts').insertOne(contact);
+  const response = await mongodb.getDb().db().collection('recipes').insertOne(recipe);
   if (response.acknowledged) {
     res.status(201).json(response);
   } else {
@@ -34,17 +39,22 @@ const createContact = async (req, res) => {
   }
 };
 
-const updateContact = async (req, res) => {
+const updateRecipe = async (req, res) => {
   const userId = new ObjectId(req.params.id);
 
-  const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+  const recipe = {
+    recipeName: req.body.recipeName,
+    description: req.body.description,
+    source: req.body.source,
+    servings: req.body.servings,
+    prepTime: req.body.prepTime,
+    cookTime: req.body.cookTime,
+    category: req.body.category,
+    keywords: req.body.keywords,
+    ingredients: req.body.ingredients,
+    instructions: req.body.instructions
   };
-  const response = await mongodb.getDb().db().collection('contacts').replaceOne({ _id: userId }, contact);
+  const response = await mongodb.getDb().db().collection('recipes').replaceOne({ _id: userId }, recipe);
   console.log(response);
   if (response.modifiedCount > 0) {
     res.status(204).send();
@@ -53,10 +63,10 @@ const updateContact = async (req, res) => {
   }
 };
 
-const deleteContact = async (req, res) => {
+const deleteRecipe = async (req, res) => {
   const userId = new ObjectId(req.params.id);
 
-  const response = await mongodb.getDb().db().collection('contacts').deleteOne({ _id: userId }, true);
+  const response = await mongodb.getDb().db().collection('recipes').deleteOne({ _id: userId }, true);
   console.log(response);
   if (response.deletedCount > 0) {
     res.status(204).send();
@@ -68,7 +78,7 @@ const deleteContact = async (req, res) => {
 module.exports = { 
   getAll, 
   getSingle, 
-  createContact,
-  updateContact, 
-  deleteContact
+  createRecipe,
+  updateRecipe, 
+  deleteRecipe
 };
